src/main.css
div[style*="aspect-ratio"]:not([class*="embed-"] div) {
	aspect-ratio: unset !important;
	width: auto !important;
}

video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"]):not(div.media-engine-video video) {
	width: unset !important;
	height: unset !important;
	max-width: 100%;
	max-height: 100%;
}

[class*="imageWrapper-"]:has(video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"]):not(div.media-engine-video video)) > div {
	background-color: transparent !important;
	display: inline-flex !important;
}

[class*="imageWrapper-"]:has(video[style*="width"]:not(#gif-picker-tab-panel video):not([style*="width: auto"]):not(div.media-engine-video video)) {
	aspect-ratio: unset !important;
	display: inline-flex !important;
	width: unset !important;
}

[class*="message-"]:not([class*="groupStart-"]) {
	min-height: 0 !important;
}

